--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
+    "passport": "^0.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
