--- a/shopping-list/package.json
+++ b/shopping-list/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
