--- a/shopping-list/package.json
+++ b/shopping-list/package.json
@@ -34,6 +34,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
-    "vite-plugin-mkcert": "^1.17.6"
+    "vite-plugin-mkcert": "^1.17.6",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
