--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ MONGO_DB_HOST=192.168.1.72
 MONGO_DB_PORT=27017
 MONGO_DB_NAME=shoppinglist
 MONGO_DB_USER=admin
-MONGO_DB_PASSWORD=zoTmGA51i8
-JWT_SECRET="1*ye%:fscO+/9uC:0nXN>KZKdptMHMQHHip<V4A5v[p*tod2jjXDK*$9NMPXa-`"
+MONGO_DB_PASSWORD=
+JWT_SECRET=
