--- a/shopping-list/Dockerfile
+++ b/shopping-list/Dockerfile
@@ -12,7 +12,7 @@ RUN npm run build
 # Stage 2: Production Stage
 FROM nginx:alpine AS production
 
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /usr/src/app/dist /usr/share/nginx/html
 
 EXPOSE 80
 
