Refactor Dockerfile to use Apache server and add .htaccess for URL rewriting

--- a/shopping-list/Dockerfile
+++ b/shopping-list/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build Stage
+# Stage 1: Build
 FROM node:18 AS build
 
 WORKDIR /usr/src/app
@@ -9,11 +9,22 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Production Stage
-FROM nginx:alpine AS production
+# Copy .htaccess into build output
+RUN cp public/.htaccess dist/.htaccess
 
-COPY --from=build /usr/src/app/dist /usr/share/nginx/html
+# Stage 2: Apache server
+FROM httpd:alpine AS production
+
+# Enable mod_rewrite
+RUN sed -i '/^#LoadModule rewrite_module/s/^#//' /usr/local/apache2/conf/httpd.conf
+
+# Copy build files
+COPY --from=build /usr/src/app/dist /usr/local/apache2/htdocs/
+
+# Enable .htaccess usage
+RUN sed -i 's/AllowOverride None/AllowOverride All/g' /usr/local/apache2/conf/httpd.conf && \
+    printf '\n<Directory "/usr/local/apache2/htdocs">\n  AllowOverride All\n</Directory>\n' >> /usr/local/apache2/conf/httpd.conf
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["httpd-foreground"]
