Update environment variables in Docker and runtime configuration
- Change VITE_API_HOST to API_HOST in compose.yaml for consistency.
- Refactor Dockerfile comments for clarity and update runtime-env.js to include API_URL.

--- a/compose.yaml
+++ b/compose.yaml
@@ -38,6 +38,6 @@ services:
     ports:
       - '3001:3001'
     environment:
-      - VITE_API_HOST=
+      - API_HOST=
     volumes:
       - /path/to/your/react-build:/usr/share/nginx/html # You can update this path
