Refactor Dockerfile: Update build stage comments and modify runtime configuration to use API_HOST

--- a/shopping-list/Dockerfile
+++ b/shopping-list/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build Stage
+# Stage 1: Build
 FROM node:18 AS build
 
 WORKDIR /usr/src/app
@@ -8,6 +8,8 @@ RUN npm install
 
 COPY . .
 RUN npm run build
+
+# Copy .htaccess manually
 RUN cp public/.htaccess dist/.htaccess
 
 # Stage 2: Apache Server
@@ -16,7 +18,7 @@ FROM httpd:alpine
 # Enable mod_rewrite
 RUN sed -i '/^#LoadModule rewrite_module/s/^#//' /usr/local/apache2/conf/httpd.conf
 
-# Create temporary app directory
+# Create temp app directory
 RUN mkdir /app
 
 # Copy built app to temporary location
@@ -28,8 +30,11 @@ RUN sed -i 's/AllowOverride None/AllowOverride All/g' /usr/local/apache2/conf/ht
 
 # Start-up script to copy files only if volume is empty
 CMD sh -c ' \
-  echo "window.__RUNTIME_CONFIG__ = {" \
-  "API_URL: \"${API_URL}\"," \
-  "FEATURE_X: \"${FEATURE_X}\"" \
-  "};" > /usr/local/apache2/htdocs/runtime-env.js && \
+  if [ ! -f /usr/local/apache2/htdocs/index.html ]; then \
+    cp -r /app/* /usr/local/apache2/htdocs/; \
+    echo "window.__RUNTIME_CONFIG__ = {" \
+      "API_HOST: \"${API_HOST}\"," \
+    "};" > /usr/local/apache2/htdocs/runtime-env.js && \
+  fi && \
   httpd-foreground'
+
